Changes of exception handling

--- a/RTE/Report/ExtentReport/ExtentReportResults.html
+++ b/RTE/Report/ExtentReport/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-07-19 17:12:02</span>
+					<span class='suite-started-time'>2022-07-20 10:08:55</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 2m 12s+97ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 2m 19s+79ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 2m 12s+97ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 2m 19s+79ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-07-19 17:09:50</span> 
+							<span class='panel-lead suite-started-time'>2022-07-20 10:06:36</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-07-19 17:12:03</span> 
+							<span class='panel-lead suite-ended-time'>2022-07-20 10:08:55</span> 
 						</div> 
 					</div>
 				</div>
@@ -168,7 +168,7 @@
 								<tbody>
 										<tr>
 											<td>User Name</td>
-											<td>rprajapati</td>
+											<td>SIPL92$</td>
 										</tr>
 										<tr>
 											<td>OS</td>
@@ -176,7 +176,7 @@
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>16.0.2</td>
+											<td>11.0.13</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
@@ -237,15 +237,15 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='c466a17e-c389-4667-9d03-ef8aaa96b475'>
+										<li class='collection-item test displayed active pass ' extentid='58f54e32-246e-4e4e-8eee-5a095ab7e5a9'>
 											<div class='test-head'>
-												<span class='test-name'>searchcreatedLOCJob </span>
+												<span class='test-name'>rteOneToOneOrderProcess </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-19 17:10:14</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-20 10:07:03</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -264,13 +264,223 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:11:54</td>
-																	<td class='step-details'>Test Case Pass is searchcreatedLOCJob</td>
+																	<td class='timestamp'>10:07:17</td>
+																	<td class='step-details'>Test Case Pass is rteOneToOneOrderProcess</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:11:54</td>
-																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/searchcreatedLOCJob.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/searchcreatedLOCJob.png' /></a></td>
+																	<td class='timestamp'>10:07:17</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteOneToOneOrderProcess.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteOneToOneOrderProcess.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='1ceea7fe-f699-4b49-a228-cae7598b754a'>
+											<div class='test-head'>
+												<span class='test-name'>rteOneToManyOrderProcess </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-20 10:07:17</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:07:30</td>
+																	<td class='step-details'>Test Case Pass is rteOneToManyOrderProcess</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:07:31</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteOneToManyOrderProcess.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteOneToManyOrderProcess.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='3adbacb7-f85d-4d21-9b9f-15b13eb51d93'>
+											<div class='test-head'>
+												<span class='test-name'>rteManyToOneOrderProcess </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-20 10:07:31</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:07:42</td>
+																	<td class='step-details'>Test Case Pass is rteManyToOneOrderProcess</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:07:43</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteManyToOneOrderProcess.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteManyToOneOrderProcess.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='7ea17ec0-b0e9-442a-9eba-085633a641fe'>
+											<div class='test-head'>
+												<span class='test-name'>rteManyToManyOrderProcess </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-20 10:07:43</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:07:54</td>
+																	<td class='step-details'>Test Case Pass is rteManyToManyOrderProcess</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:07:55</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteManyToManyOrderProcess.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteManyToManyOrderProcess.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='4b1802af-40a1-4bb4-a1ad-2ab9bab01142'>
+											<div class='test-head'>
+												<span class='test-name'>rteRejectResendScan </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-20 10:07:55</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:08:08</td>
+																	<td class='step-details'>Test Case Pass is rteRejectResendScan</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:08:08</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteRejectResendScan.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteRejectResendScan.png' /></a></td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='071c7e7d-2fab-4fa9-b990-e15c747aba01'>
+											<div class='test-head'>
+												<span class='test-name'>rteCrudOperations </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-07-20 10:08:08</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:08:51</td>
+																	<td class='step-details'>Test Case Pass is rteCrudOperations</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:08:51</td>
+																	<td class='step-details'><a href='C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteCrudOperations.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\rprajapati\git\RTE\RTE/Report/RTE_Screenshot/rteCrudOperations.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
