--- a/RTE/test-output/old/Default suite/methods.html
+++ b/RTE/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7f793">  <td>22/07/15 15:32:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@72e5a8e]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 15:41:33</td>   <td>514014</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@72e5a8e]">&lt;&lt;SendEmail</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 15:32:38</td>   <td>-20778</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@72e5a8e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="b09ffa">  <td>22/07/15 15:32:59</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEManyToManyOrderProcess.rteManyToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@72e5a8e]">rteManyToManyOrderProcess</td> 
-  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="a7f793">  <td>22/07/15 15:41:33</td>   <td>513815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEManyToManyOrderProcess@72e5a8e]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/07/19 17:11:54</td>   <td>0</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTECrudOperations.SearchLOCJob@7d4f9aae]">&lt;&lt;SendEmail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/07/19 17:10:14</td>   <td>-100045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTECrudOperations.SearchLOCJob@7d4f9aae]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/07/19 17:09:50</td>   <td>-123669</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTECrudOperations.SearchLOCJob@7d4f9aae]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="78cddf">  <td>22/07/19 17:11:54</td>   <td>-152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTECrudOperations.SearchLOCJob@7d4f9aae]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="81a7ac">  <td>22/07/19 17:10:14</td>   <td>-100040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchLOCJob.searchcreatedLOCJob()[pri:0, instance:rte_RTECrudOperations.SearchLOCJob@7d4f9aae]">searchcreatedLOCJob</td> 
+  <td>main@593415583</td>   <td></td> </tr>
 </table>
